fix: spacing

--- a/therr-client-web/src/styles/layout/footer/index.scss
+++ b/therr-client-web/src/styles/layout/footer/index.scss
@@ -36,7 +36,7 @@ footer {
         justify-content: center;
         cursor: pointer;
         gap: 1px;
-        padding: 0.25rem 0.5rem;
+        padding: 0.25rem 0.5rem 0.5rem;
 
         .footer-nav-label {
             color: $therr-white;
